Full Website Final Draft

--- a/index.html
+++ b/index.html
@@ -791,13 +791,21 @@
           <h2 class="details-heading">Socials</h2>
           <div class="social-icons">
             <div class="sc-in-div">
-            <p><i class="fa-brands fa-facebook"></i></p>
-            <p><i class="fa-brands fa-linkedin"></i></p>
-            <p><i class="fa-brands fa-square-instagram"></i></p>
-            <p><i class="fa-brands fa-google"></i></p>
+              <p><i class="fa-brands fa-facebook"></i></p>
+              <p><i class="fa-brands fa-linkedin"></i></p>
+              <p><i class="fa-brands fa-square-instagram"></i></p>
+              <p><i class="fa-brands fa-google"></i></p>
+            </div>
           </div>
         </div>
       </div>
     </section>
+
+    <!-- ---------------- -->
+    <!-- Footer copyright -->
+    <!-- ---------------- -->
+    <footer class="copyright">
+      <p><i class="fa-regular fa-copyright"></i>&nbsp;2025 Cloned by Noel V Abraham for learning purposes. All rights belong to Futura Labs.</p>
+    </footer>
   </body>
 </html>
